# judicAIta

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  QC_REVIEW_LEG-1.md  README.md  ROADMAP.md  SECURITY_FIX_SUMMARY.md  TUNIX_SETUP.md  agentic_architecture.md  claude-review.yml  docker-compose.yml  pyproject.toml  repo_analysis.md  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  lint.yml  test.yml
assets/: README.md
data/: generic_domain_test_prompts.json
deployment/kubernetes/: deployment.yaml
docs/: COLAB_VALIDATION_GUIDE.md  GENERIC_DOMAIN_EVALUATION.md  GRPO_TRAINING.md  HACKATHON_SUBMISSION_CHECKLIST.md  LEG-7_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SUBMISSION_RECORD.md  XML_FORMAT_SPEC.md  hackathon_writeup.md  video_script.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/guides/: development.md  user-guide.md
docs/references/: grpo_fast_patterns.md  grpo_quick_reference.md
examples/: README.md  basic_usage.py  reasoning_trace_example.py
examples/notebooks/: README.md  train_tunix_reasoning.ipynb
outputs/: sample_model_responses.json
scripts/: debug_grpo.py  enhance_notebook_validation.py  fix_notebook_code.py  inspect_tunix_modules.py  update_notebook.py  update_notebook_data.py  update_notebook_markdown.py
src/: __init__.py
src/agents/: __init__.py  base.py
src/agents/extraction/: __init__.py  clause_extractor.py  entity_extractor.py
src/agents/ingestion/: __init__.py  pdf_parser.py
src/agents/orchestration/: __init__.py  workflow.py
src/api/: __init__.py  health.py
src/judicaita/: __init__.py  cli.py
src/judicaita/citation_mapping/: __init__.py  models.py  parser.py  service.py
src/judicaita/core/: __init__.py  config.py  exceptions.py
src/judicaita/document_input/: __init__.py  base.py  pdf_processor.py  service.py  word_processor.py
src/judicaita/reasoning_trace/: __init__.py  generator.py  models.py
src/judicaita/summary_generator/: __init__.py  generator.py  models.py
src/judicaita/training/: __init__.py  data_curation.py  evaluation.py  grpo_trainer.py  profiler.py  rewards.py  validation.py
src/judicaita/utils/: __init__.py
src/models/: __init__.py
src/models/ensemble/: __init__.py  multi_model.py
src/models/gemma3/: __init__.py  model_wrapper.py
src/models/rag/: __init__.py  hybrid_rag.py  legal_rag.py
src/observability/: __init__.py  monitoring.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_workflow_integration.py
tests/unit/: __init__.py  test_base_agent.py  test_citation_parser.py  test_clause_extractor.py  test_config.py  test_entity_extractor.py  test_exceptions.py  test_hybrid_rag.py  test_legal_rag.py  test_multi_model.py  test_pdf_parser.py
tests/unit/training/: __init__.py  test_config.py  test_phase2_data_validation.py  test_phase2_profiler.py  test_phase2_rewards.py  test_rewards.py
