[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judicaita"
version = "0.1.0"
description = "Multi-agent legal automation platform with Gemma 3 1B for Google Tunix Hackathon"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "AGPL-3.0"}
authors = [
    {name = "JudicAIta Team", email = "judicaita@example.com"}
]
keywords = [
    "legal-ai",
    "gemma",
    "multi-agent",
    "tpu",
    "kaggle",
    "tunix",
    "legal-automation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML Framework (TPU-optimized versions)
    "jax[tpu]==0.4.20",
    "jaxlib==0.4.20",
    "flax==0.7.5",
    "optax==0.1.7",

    # Model & Inference
    "transformers==4.36.0",
    "tokenizers==0.15.0",
    "sentencepiece==0.1.99",
    "peft==0.7.0",  # LoRA support
    "accelerate==0.25.0",

    # Agent Orchestration
    "langchain==0.1.0",
    "langchain-core==0.1.0",
    "langgraph==0.0.20",
    "langsmith==0.0.77",

    # Vector Store & RAG
    "chromadb==0.4.18",
    "faiss-cpu==1.7.4",
    "sentence-transformers==2.2.2",

    # Document Processing
    "pypdf==3.17.4",
    "pdfplumber==0.10.3",
    "python-docx==1.1.0",
    "pytesseract==0.3.10",
    "pdf2image==1.16.3",

    # NLP & Legal Entity Recognition
    "spacy==3.7.2",
    "spacy-transformers==1.3.4",

    # API Layer
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",

    # Data Processing
    "numpy==1.26.2",
    "pandas==2.1.4",
    "datasets==2.15.0",

    # Utilities
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",
    "tqdm==4.66.1",
    "requests==2.31.0",
    "aiohttp==3.9.1",

    # Monitoring & Logging
    "wandb==0.16.0",
    "loguru==0.7.2",
    "prometheus-client==0.19.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "hypothesis==6.92.1",  # Property-based testing

    # Code Quality
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
    "pylint==3.0.3",

    # Type Stubs
    "types-requests==2.31.0.10",
    "types-PyYAML==6.0.12.12",

    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.4.14",
    "mkdocstrings[python]==0.24.0",

    # Development Tools
    "ipython==8.18.1",
    "jupyter==1.0.0",
    "pre-commit==3.5.0",
]

kaggle = [
    # Kaggle-specific dependencies for TPU training
    "kaggle==1.5.16",
    "google-cloud-storage==2.13.0",
]

all = [
    "judicaita[dev,kaggle]",
]

[project.urls]
Homepage = "https://github.com/judicaita/judicAIta"
Documentation = "https://docs.judicaita.dev"
Repository = "https://github.com/judicaita/judicAIta"
"Bug Tracker" = "https://github.com/judicaita/judicAIta/issues"
Changelog = "https://github.com/judicaita/judicAIta/blob/main/CHANGELOG.md"

[project.scripts]
judicaita = "src.api.main:main"
judicaita-train = "src.models.gemma3.train:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "docs*", "scripts*"]

# ==================== BLACK ====================
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

# ==================== RUFF ====================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "notebooks",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["src"]

# ==================== MYPY ====================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Too strict for some decorators
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Ignore missing imports for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "flax.*",
    "jax.*",
    "optax.*",
    "langchain.*",
    "langgraph.*",
    "chromadb.*",
    "faiss.*",
    "pdfplumber.*",
    "spacy.*",
    "wandb.*",
]
ignore_missing_imports = true

# ==================== PYTEST ====================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (moderate speed, multiple components)",
    "e2e: End-to-end tests (slow, full workflows)",
    "tpu: Tests requiring TPU access",
    "slow: Slow tests (>5 seconds)",
    "kaggle: Tests specific to Kaggle environment",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# ==================== PYLINT ====================
[tool.pylint.main]
py-version = "3.10"
jobs = 0  # Auto-detect CPU cores
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name (handled by ruff)
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0212",  # Access to protected member
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 60
min-public-methods = 1

# ==================== BANDIT (Security) ====================
[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
skips = ["B101", "B601"]  # Skip assert_used, paramiko_calls

# ==================== PRE-COMMIT ====================
# Note: .pre-commit-config.yaml should be created separately
